; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxfenc.c_gxf_write_packet_header.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_gxfenc.c_gxf_write_packet_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @gxf_write_packet_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gxf_write_packet_header(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @avio_wb32(i32* %5, i32 0)
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @avio_w8(i32* %7, i32 1)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @avio_w8(i32* %9, i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @avio_wb32(i32* %12, i32 0)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @avio_wb32(i32* %14, i32 0)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @avio_w8(i32* %16, i32 225)
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @avio_w8(i32* %18, i32 226)
  ret void
}

declare dso_local i32 @avio_wb32(i32*, i32) #1

declare dso_local i32 @avio_w8(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
